# team-knowledge-base

./: .gitignore  CLAUDE.md  frontend-redesign-mockup.html  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  explorer.md  implementer.md  requirements-agent.md  tasks-agent.md  tech-design-agent.md  test-runner.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .env.example  .gitignore  package.json  pyproject.toml
backend/kb/: config.py  errors.py  logging.py  main.py  middleware.py
backend/kb/agents/: compile.py  compile_schema.py  lint.py  query.py
backend/kb/api/: chat.py  deps.py  ingest.py  lint.py  wiki.py
backend/kb/auth/: jwt.py  middleware.py  routes.py
backend/kb/jobs/: store.py
backend/kb/wiki/: frontmatter.py  fs.py  models.py
backend/knowledge/schema/: SCHEMA.md
backend/knowledge/wiki/: index.md  log.md
backend/schema/: SCHEMA.md
backend/tests/: conftest.py  test_api_chat.py  test_api_ingest.py  test_api_lint.py  test_api_wiki.py  test_auth_jwt.py  test_auth_middleware.py  test_auth_session.py  test_compile_agent.py  test_compile_schema.py  test_errors.py  test_frontmatter.py  test_healthz.py  test_job_store.py  test_lint_agent.py  test_logging.py  test_middleware.py  test_models.py  test_query_agent.py  test_wiki_fs.py
docs/superpowers/plans/: 2026-04-16-backend-implementation.md  2026-04-16-frontend-implementation.md  (+8 more)
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
scripts/: setup-env.sh
(+65 files in other folders)
